[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Gabriel Pizarro <gpizarro@javaman.net>"]

[dependencies]
itertools = "0.10"

[[bin]]
name = "day1"

[[bin]]
name = "day2_idiomatic"

[[bin]]
name = "day2_algorithmic"

[[bin]]
name = "day3"
